# IndiCarbon

./: .gitignore  LICENSE  README.md  docker-compose.yml  download_screens.py  guardrail_architecture.md  pyproject.toml
.skills/: rules.md
.skills/compliance-reporting/: SKILL.md
.skills/document-analysis/: SKILL.md
.skills/marketplace-trading/: SKILL.md
Design/auth_onboarding/: code.html
Design/dashboard_error_state/: code.html
Design/dashboard_success_state/: code.html
Design/eco_futuristic_glassmorphism/: DESIGN.md
Design/landing_page_the_mission/: code.html
Design/login_indicarbon_ai/: code.html
Design/super_admin_sales_command_center/: code.html
apps/: notes.md
apps/backend/: test_gateway.py
apps/frontend/: Dockerfile  lint.txt  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/gateway/: Dockerfile  main.py  requirements.txt
docs/: PROJECT_STRUCTURE.md  a2a-protocol.md  api_integration_walkthrough.md  backend_architecture.md  mcp-server.md
docs/context/: 01_project_overview.md  02_frontend_architecture.md  03_backend_architecture.md  04_domain_concepts.md  05_api_layer.md  INDEX.md
frontend/: package-lock.json
libs/shared-logic/: setup.py
mcp-server/: README.md  claude_desktop_config_snippet.json  install_mcp.bat  pyproject.toml
mcp-server/indicarbon_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
mcp-server/indicarbon_mcp/tools/: __init__.py  agents.py  auth.py  documents.py  emissions.py  marketplace.py  organizations.py
scripts/: a2a_demo_client.py
services/ai-agent/: Dockerfile  (+2 more)
(+231 files in other folders)
