[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indicarbon-mcp"
version = "1.0.0"
description = "MCP server for IndiCarbon AI — India's carbon trading & compliance platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "IndiCarbon AI" }]

dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.4.0",
]

[project.scripts]
indicarbon-mcp = "indicarbon_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["indicarbon_mcp"]

[tool.ruff.lint]
select = ["E", "F", "I"]
